--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <span class="block w-full text-xl text-center text-white leading-8 font-monsterrat font-medium">
                     Tự hào là dòng rượu cao cấp đầu tiên cho phụ nữ <br/> được mang đến bạn bởi những người đam mê rượu 
                 </span>
-                <button class="transparent text-white border-[3px] mt-8 w-fit py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50">
+                <button class="transparent text-white border-[3px] mt-8 w-fit py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50" data-button-link="/products.html">
                     Các sản phẩm của Lavale
                 </button>
             </div>
@@ -467,7 +467,9 @@
                         </div>
                         <span class="block w-full text-lg text-center text-white leading-10 font-monsterrat mt-6 font-medium capitalize"> Lavale Mận </span>
                         <span class="block w-full text-center text-advice font-monsterrat"> 345,000 đ </span>
-                        <button class="transparent text-white border-[3px] mt-6 w-full py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50">Xem chi tiết</button>
+                        <button class="
+                            transparent text-white border-[3px] mt-6 w-full py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50
+                        " data-button-link="/products.html">Xem chi tiết</button>
                     </div>
                     <div class="w-full z-10">
                         <div class="
@@ -482,7 +484,9 @@
                         </div>
                         <span class="block w-full text-lg text-center text-white leading-10 font-monsterrat mt-6 font-medium capitalize"> Lavale Táo Mèo </span>
                         <span class="block w-full text-center text-advice font-monsterrat"> 345,000 đ</span>
-                        <button class="transparent text-white border-[3px] mt-6 w-full py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50">Xem chi tiết</button>
+                        <button class="
+                            transparent text-white border-[3px] mt-6 w-full py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50
+                        " data-button-link="/products.html">Xem chi tiết</button>
                     </div>
                     <div class="w-full z-10">
                         <div class="
@@ -497,7 +501,9 @@
                         </div>
                         <span class="block w-full text-lg text-center text-white leading-10 font-monsterrat mt-6 font-medium capitalize"> Lavale Vải </span>
                         <span class="block w-full text-center text-advice font-monsterrat"> 345,000 đ </span>
-                        <button class="transparent text-white border-[3px] mt-6 w-full py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50">Xem chi tiết</button>
+                        <button class="
+                            transparent text-white border-[3px] mt-6 w-full py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50
+                        " data-button-link="/products.html">Xem chi tiết</button>
                     </div>
                 </div>
             </div>
@@ -543,7 +549,7 @@
                     <button class="
                         w-full transparent text-white border-[3px] mt-8 w-fit py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50 text-lg
                         md:w-fit
-                    ">
+                    " data-button-link="/introduction.html">
                         Các hoạt động của Lavale
                     </button>
                 </div>
@@ -591,7 +597,7 @@
                             <span class="
                                 flex flex-row items-center inline-block text-left text-base font-semibold font-monsterrat uppercase text-white px-12 pb-12
                                 lg:pb-0
-                            ">
+                            " data-button-link="/blogs.html">
                                 Xem chi tiết
                                 <svg class="h-6 w-6 text-white ml-4"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <line x1="5" y1="12" x2="19" y2="12" />  <line x1="13" y1="18" x2="19" y2="12" />  <line x1="13" y1="6" x2="19" y2="12" /></svg>
                             </span>
@@ -610,7 +616,7 @@
                             <span class="
                                 flex flex-row items-center inline-block text-left text-base font-semibold font-monsterrat uppercase text-white px-12 pb-12
                                 lg:pb-0
-                            ">
+                            " data-button-link="/blogs.html">
                                 Xem chi tiết
                                 <svg class="h-6 w-6 text-white ml-4"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <line x1="5" y1="12" x2="19" y2="12" />  <line x1="13" y1="18" x2="19" y2="12" />  <line x1="13" y1="6" x2="19" y2="12" /></svg>
                             </span>
@@ -634,7 +640,7 @@
                             <span class="
                                 flex flex-row items-center inline-block text-left text-base font-semibold font-monsterrat uppercase text-white px-12 pb-12
                                 lg:pb-0
-                            ">
+                            " data-button-link="/blogs.html">
                                 Xem chi tiết
                                 <svg class="h-6 w-6 text-white ml-4"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <line x1="5" y1="12" x2="19" y2="12" />  <line x1="13" y1="18" x2="19" y2="12" />  <line x1="13" y1="6" x2="19" y2="12" /></svg>
                             </span>
@@ -653,7 +659,7 @@
                             <span class="
                                 flex flex-row items-center inline-block text-left text-base font-semibold font-monsterrat uppercase text-white px-12 pb-12
                                 lg:pb-0
-                            ">
+                            " data-button-link="/blogs.html">
                                 Xem chi tiết
                                 <svg class="h-6 w-6 text-white ml-4"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <line x1="5" y1="12" x2="19" y2="12" />  <line x1="13" y1="18" x2="19" y2="12" />  <line x1="13" y1="6" x2="19" y2="12" /></svg>
                             </span>
