--- a/products.html
+++ b/products.html
@@ -198,7 +198,9 @@
                         <span class="block w-full text-left font-monsterrat text-[32px] leading-[40px] text-white/[60%] mb-[32px]">
                             345.000 ₫
                         </span>
-                        <button class="transparent text-white border-[2px] w-full md:w-fit py-3 px-9 uppercase rounded-md leading-[24px] font-monsterrat font-semibold hover:bg-white/50 mb-[32px] text-[18px]">
+                        <button class="
+                            transparent text-white border-[2px] w-full md:w-fit py-3 px-9 uppercase rounded-md leading-[24px] font-monsterrat font-semibold hover:bg-white/50 mb-[32px] text-[18px]
+                        " data-button-link="/contact.html">
                             Liên hệ Lavale
                         </button>
                         <span class="block uppercase text-left font-monsterrat text-[15px] leading-[24px] text-white/[60%] mb-[10px]">
@@ -243,7 +245,9 @@
                         <span class="block w-full text-left font-monsterrat text-[32px] leading-[40px] text-white/[60%] mb-[32px]">
                             345.000 ₫
                         </span>
-                        <button class="transparent text-white border-[2px] w-full md:w-fit py-3 px-9 uppercase rounded-md leading-[24px] font-monsterrat font-semibold hover:bg-white/50 mb-[32px] text-[18px]">
+                        <button class="
+                            transparent text-white border-[2px] w-full md:w-fit py-3 px-9 uppercase rounded-md leading-[24px] font-monsterrat font-semibold hover:bg-white/50 mb-[32px] text-[18px]
+                        " data-button-link="/contact.html">
                             Liên hệ Lavale
                         </button>
                         <span class="block uppercase text-left font-monsterrat text-[15px] leading-[24px] text-white/[60%] mb-[10px]">
@@ -288,7 +292,9 @@
                         <span class="block w-full text-left font-monsterrat text-[32px] leading-[40px] text-white/[60%] mb-[32px]">
                             345.000 ₫
                         </span>
-                        <button class="transparent text-white border-[2px] w-full md:w-fit py-3 px-9 uppercase rounded-md leading-[24px] font-monsterrat font-semibold hover:bg-white/50 mb-[32px] text-[18px]">
+                        <button class="
+                            transparent text-white border-[2px] w-full md:w-fit py-3 px-9 uppercase rounded-md leading-[24px] font-monsterrat font-semibold hover:bg-white/50 mb-[32px] text-[18px]
+                        " data-button-link="/contact.html">
                             Liên hệ Lavale
                         </button>
                         <span class="block uppercase text-left font-monsterrat text-[15px] leading-[24px] text-white/[60%] mb-[10px]">
