--- a/introduction.html
+++ b/introduction.html
@@ -524,7 +524,7 @@
                 <span class="block w-full text-xl text-center text-white/60 font-medium font-monsterrat mb-12 ">
                     Cùng Lavale tìm hiểu thêm về các tác dụng của rượu và rượu thuốc truyền thống
                 </span>
-                <div class="flex flex-col w-full justify-between items-center align-center space-y-4">
+                <div class="flex flex-col w-full justify-between items-center align-center space-y-4 mb-[56px]">
                     <div class="
                         grid grid-cols-1 grid-rows-2 gap-3 w-full justify-between items-center align-center z-10
                         md:grid-cols-2 md:grid-rows-1
@@ -611,6 +611,48 @@
                             </span>
                         </div>
                     </div>
+                </div>
+
+                <div class="w-full flex flex-row justify-center items-center align-center">
+                    <span class="
+                        block uppercase mr-[16px] cursor-pointer
+                        font-monsterrat font-semibold text-[16px] leading-[24px] text-white/30
+                    ">Quay lại</span>
+                    <div class="flex flex-row justify-between gap-[8px]">
+                        <div class="
+                            w-[55px] aspect-[1/1] cursor-pointer
+                            border-[2px] border-white rounded-[8px] 
+                            flex justify-center align-center items-center
+                            font-monsterrat font-semibold text-[18px] leading-[24px] text-white
+                        ">
+                            1
+                        </div>
+                        <div class="
+                            w-[55px] aspect-[1/1] cursor-pointer
+                            flex justify-center align-center items-center
+                            font-monsterrat font-semibold text-[18px] leading-[24px] text-white
+                        ">
+                            2
+                        </div>
+                        <div class="
+                            w-[55px] aspect-[1/1] cursor-pointer
+                            flex justify-center align-center items-center
+                            font-monsterrat font-semibold text-[18px] leading-[24px] text-white
+                        ">
+                            3
+                        </div>
+                        <div class="
+                            w-[55px] aspect-[1/1] cursor-pointer
+                            flex justify-center align-center items-center
+                            font-monsterrat font-semibold text-[18px] leading-[24px] text-white
+                        ">
+                            4
+                        </div>
+                    </div>
+                    <span class="
+                        block uppercase ml-[16px] cursor-pointer
+                        font-monsterrat font-semibold text-[16px] leading-[24px] text-white
+                    ">Tiếp theo</span>
                 </div>
             </div>
         </div>
