--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <title>Lavale</title>
 </head>
 
-<body class="relative p-0 m-0 w-full h-full overflow-x-hidden contain">
+<body class="relative p-0 m-0 w-full h-full overflow-x-hidden contain" style="text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004); text-rendering: optimizeLegibility !important; -webkit-font-smoothing: antialiased !important;">
     <header class="
         relative p-0 w-full z-0 overflow-hidden aspect-[375/718] flex items-center z-2
         md:aspect-[834/740]
@@ -115,7 +115,7 @@
                 md:aspect-[834/600]
                 lg:aspect-[1280/655] lg:w-[88.89%]
             ">
-                <h1 class="w-full text-center text-6xl text-white font-bold font-display mb-12 capitalize">
+                <h1 class="w-full text-center text-6xl text-white font-semibold leading-[88px] tracking-[0.5px] font-display mb-12 capitalize">
                     Tinh Hoa <br/> Đến Từng Giọt Rượu
                 </h1>
                 <span class="block w-full text-xl text-center text-white leading-8 font-monsterrat font-medium">
@@ -208,7 +208,7 @@
                 md:w-[92.3%]
                 lg:w-[88.89%]
             ">
-                <h1 class="w-full text-center text-white font-display font-bold text-6xl capitalize mb-8 mt-20">câu chuyện của Lavale</h1>
+                <h1 class="w-full text-center text-white font-display font-semibold tracking-[0.5px] leading-[88px] text-6xl capitalize mb-8 mt-20">câu chuyện của Lavale</h1>
                 <span class="block w-full text-center text-advice font-monsterrat">
                     Từ nguồn nước tinh khiết vùng núi mang lại giá trị đặc biệt.Kết hợp giữa khí hậu mát mẻ, <br/> đất đai màu mỡ và nguồn nước núi cao tạo ra hương vị đậm đà.
                 </span>
@@ -254,14 +254,14 @@
                     lg:w-[43%] lg:aspect-[547/480]
                 " data-aos="fade-right">
                     <h1 class="
-                        w-full font-display text-5xl text-white mb-4 capitalize
+                        w-full font-display text-5xl text-white mb-4 capitalize leading-normal font-semibold
                         md:text-left md:pl-6
                         lg:pl-14
                     ">
                         Khởi Nguồn Từ Núi Rừng
                     </h1>
                     <span class="
-                        block w-full font-monsterrat text-base text-white/60
+                        block w-full font-monsterrat text-[15px] text-white/60
                         md:text-left md:pl-6
                         lg:pl-14
                     ">
@@ -284,14 +284,14 @@
                     lg:w-[43%] lg:aspect-[547/480]
                 " data-aos="fade-left">
                     <h1 class="
-                        w-full font-display text-5xl text-white mb-4 capitalize
+                        w-full font-display text-5xl text-white mb-4 capitalize leading-normal font-semibold
                         md:text-left md:pr-6
                         lg:pr-14
                     ">
                         Nuôi dưỡng bởi đam mê
                     </h1>
                     <span class="
-                        block w-full font-monsterrat text-base text-white/60
+                        block w-full font-monsterrat text-[15px] text-white/60
                         md:text-left md:pr-6
                         lg:pr-14
                     ">
@@ -336,14 +336,14 @@
                     lg:w-[43%] lg:aspect-[547/480]
                 " data-aos="fade-right">
                     <h1 class="
-                        w-full font-display text-5xl text-white mb-4 capitalize
+                        w-full font-display text-5xl text-white mb-4 capitalize leading-normal font-semibold
                         md:text-left md:pl-6
                         lg:pl-14
                     ">
                         Thấm đẫm hương vị
                     </h1>
                     <span class="
-                        block w-full font-monsterrat text-base text-white/60
+                        block w-full font-monsterrat text-[15px] text-white/60
                         md:text-left md:pl-6
                         lg:pl-14
                     ">
@@ -366,14 +366,14 @@
                     lg:w-[43%] lg:aspect-[547/480]
                 " data-aos="fade-left">
                     <h1 class="
-                        w-full font-display text-5xl text-white mb-4 capitalize
+                        w-full font-display text-5xl text-white mb-4 capitalize leading-normal font-semibold
                         md:text-left md:pr-6
                         lg:pr-14
                     ">
                         Kết lũy từ tinh hoa
                     </h1>
                     <span class="
-                        block w-full font-monsterrat text-base text-white/60
+                        block w-full font-monsterrat text-[15px] text-white/60
                         md:text-left md:pr-6
                         lg:pr-14
                     ">
@@ -414,14 +414,14 @@
                     lg:w-[43%] lg:aspect-[547/480]
                 " data-aos="fade-right">
                     <h1 class="
-                        w-full font-display text-5xl text-white mb-4 capitalize
+                        w-full font-display text-5xl text-white mb-4 capitalize leading-normal font-semibold
                         md:text-left md:pl-6
                         lg:pl-14
                     ">
                         Chú trọng từng chi tiết
                     </h1>
                     <span class="
-                        block w-full font-monsterrat text-base text-white/60
+                        block w-full font-monsterrat text-[15px] text-white/60
                         md:text-left md:pl-6
                         lg:pl-14
                     ">
@@ -444,14 +444,14 @@
                     lg:w-[43%] lg:aspect-[547/480]
                 " data-aos="fade-left">
                     <h1 class="
-                        w-full font-display text-5xl text-white mb-4 capitalize
+                        w-full font-display text-5xl text-white mb-4 capitalize leading-normal font-semibold
                         md:text-left md:pr-6
                         lg:pr-14
                     ">
                         Nhẹ nhàng và thanh lịch
                     </h1>
                     <span class="
-                        block w-full font-monsterrat text-base text-white/60
+                        block w-full font-monsterrat text-[15px] text-white/60
                         md:text-left md:pr-6
                         lg:pr-14
                     ">
@@ -483,56 +483,56 @@
                 <h1 class="w-full text-center text-5xl text-white font-display mb-4 mt-10 capitalize">Tinh Hoa Lavale</h1>
                 <span class="block w-full text-base text-center text-advice font-monsterrat mb-12">Kết tinh của niềm tin và ước mơ</span>
                 <div class="
-                    grid grid-rows-3 gap-4 w-full
+                    grid grid-rows-3 gap-[32px] w-full
                     md:grid-cols-3 md:grid-rows-1
                 ">
-                    <div class="w-full z-10">
+                    <div class="w-full z-10" data-aos="fade-left">
                         <div class="
-                            relative w-full aspect-[343/320] flex items-center justify-center align-center bg-ruouman rounded-md bg-no-repeat bg-center bg-cover
+                            relative w-full aspect-[343/320] flex items-center justify-center align-center bg-[url('./img/ruouman_gt.jpg')] rounded-md bg-no-repeat bg-center bg-cover
                             md:aspect-[333/480]
                         ">
                             <img src="./img/spliter.png" class="w-full aspect-[333/24] absolute scale-x-[-1] top-[-1px] left-0"/>
                             <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] top-0 left-[-1px]"/>
                             <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] rotate-180 top-0 right-[-1px]" />
                             <img src="./img/spliter.png" class="w-full aspect-[333/24] absolute scale-x-[-1] rotate-180 bottom-[-1px] left-0"/>
-                            <img src="./img/ruouman.png" class="w-[65%] md:w-full" data-aos="fade-down">
+                            <!-- <img src="./img/ruouman.png" class="w-[65%] md:w-full" data-aos="fade-down"> -->
                         </div>
                         <span class="block w-full text-lg text-center text-white leading-10 font-monsterrat mt-6 font-medium capitalize"> Lavale Mận </span>
-                        <span class="block w-full text-center text-advice font-monsterrat"> 345,000 đ </span>
+                        <span class="block w-full text-center text-white/60 text-[15px] font-monsterrat"> 345,000 đ </span>
                         <button class="
                             transparent text-white border-[3px] mt-6 w-full py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50
                         " data-button-link="/products.html">Xem chi tiết</button>
                     </div>
-                    <div class="w-full z-10">
+                    <div class="w-full z-10" data-aos="fade-up">
                         <div class="
-                            relative w-full aspect-[343/320] flex items-center justify-center align-center bg-ruoutaomeo rounded-md bg-no-repeat bg-center bg-cover
+                            relative w-full aspect-[343/320] flex items-center justify-center align-center bg-[url('./img/ruoutaomeo_gt.jpg')] rounded-md bg-no-repeat bg-center bg-cover
                             md:aspect-[333/480]
                         ">
                             <img src="./img/spliter.png" class="w-full aspect-[333/24] absolute scale-x-[-1] top-[-1px] left-0"/>
                             <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] top-0 left-[-1px]"/>
                             <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] rotate-180 top-0 right-[-1px]" />
                             <img src="./img/spliter.png" class="w-full aspect-[333/24] absolute scale-x-[-1] rotate-180 bottom-[-1px] left-0"/>
-                            <img src="./img/ruoutaomeo.png" class="w-[65%] md:w-full" data-aos="fade-down">
+                            <!-- <img src="./img/ruoutaomeo.png" class="w-[65%] md:w-full" data-aos="fade-down"> -->
                         </div>
                         <span class="block w-full text-lg text-center text-white leading-10 font-monsterrat mt-6 font-medium capitalize"> Lavale Táo Mèo </span>
-                        <span class="block w-full text-center text-advice font-monsterrat"> 345,000 đ</span>
+                        <span class="block w-full text-center text-white/60 text-[15px] font-monsterrat"> 345,000 đ</span>
                         <button class="
                             transparent text-white border-[3px] mt-6 w-full py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50
                         " data-button-link="/products.html">Xem chi tiết</button>
                     </div>
-                    <div class="w-full z-10">
+                    <div class="w-full z-10" data-aos="fade-right">
                         <div class="
-                            relative w-full aspect-[343/320] flex items-center justify-center align-center bg-ruouvai rounded-md bg-no-repeat bg-center bg-cover
+                            relative w-full aspect-[343/320] flex items-center justify-center align-center bg-[url('./img/ruouvai_gt.jpg')] rounded-md bg-no-repeat bg-center bg-cover
                             md:aspect-[333/480]
                         ">
                             <img src="./img/spliter.png" class="w-full aspect-[333/24] absolute scale-x-[-1] top-[-1px] left-0"/>
                             <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] top-0 left-[-1px]"/>
                             <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] rotate-180 top-0 right-[-1px]" />
                             <img src="./img/spliter.png" class="w-full aspect-[333/24] absolute scale-x-[-1] rotate-180 bottom-[-1px] left-0"/>
-                            <img src="./img/ruouvai.png" class="w-[65%] md:w-full" data-aos="fade-down">
+                            <!-- <img src="./img/ruouvai.png" class="w-[65%] md:w-full" data-aos="fade-down"> -->
                         </div>
                         <span class="block w-full text-lg text-center text-white leading-10 font-monsterrat mt-6 font-medium capitalize"> Lavale Vải </span>
-                        <span class="block w-full text-center text-advice font-monsterrat"> 345,000 đ </span>
+                        <span class="block w-full text-center text-white/60 text-[15px] font-monsterrat"> 345,000 đ </span>
                         <button class="
                             transparent text-white border-[3px] mt-6 w-full py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50
                         " data-button-link="/products.html">Xem chi tiết</button>
@@ -572,14 +572,14 @@
                     md:pl-10 md:mt-0 md:w-[52%]
                     lg:w-[43%]
                 " data-aos="fade-right">
-                    <h1 class="text-left text-5xl text-white font-display mb-8 capitalize">Đồng Hành Cùng Lavale</h1>
+                    <h1 class="text-left text-5xl text-white font-display mb-8 capitalize leading-normal font-semibold">Đồng Hành Cùng Lavale</h1>
                     <span class="
                         block w-full text-left text-base text-white/60 font-monsterrat
                     ">
                         Cùng Lavale tham gia các sự kiện và hoạt động vui chơi giải trí trên toàn quốc, cùng nhau lan tỏa năng lượng tích cực
                     </span>
                     <button class="
-                        w-full transparent text-white border-[3px] mt-8 w-fit py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50 text-lg
+                        w-full transparent text-white border-[3px] mt-8 w-fit py-3 px-[24px] uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50 text-lg
                         md:w-fit
                     " data-button-link="/introduction.html">
                         Các hoạt động của Lavale
@@ -612,7 +612,7 @@
                 </span>
                 <div class="flex flex-col w-full justify-between items-center align-center space-y-4">
                     <div class="
-                        grid grid-cols-1 grid-rows-2 gap-3 w-full justify-between items-center align-center z-10
+                        grid grid-cols-1 grid-rows-2 gap-[16px] w-full justify-between items-center align-center z-10
                         md:grid-cols-2 md:grid-rows-1
                     ">
                         <div class="relative flex flex-col justify-center aspect-[523/192] bg-lavalelight/30 rounded-md">
@@ -655,7 +655,7 @@
                         </div>
                     </div>
                     <div class="
-                        grid grid-cols-1 grid-rows-2 gap-3 w-full justify-between items-center align-center z-10
+                        grid grid-cols-1 grid-rows-2 gap-[16px] w-full justify-between items-center align-center z-10
                         md:grid-cols-2 md:grid-rows-1
                     ">
                         <div class="relative flex flex-col justify-center aspect-[523/192] bg-lavalelight/30 rounded-md">
