--- a/introduction.html
+++ b/introduction.html
@@ -614,7 +614,7 @@
                     </div>
                 </div>
 
-                <div class="w-full flex flex-row justify-center items-center align-center" id="pagination">
+                <!-- <div class="w-full flex flex-row justify-center items-center align-center" id="pagination">
                     <span class="
                         block uppercase mr-[16px] cursor-pointer
                         font-monsterrat font-semibold text-[16px] leading-[24px] text-white/30
@@ -655,7 +655,7 @@
                         block uppercase ml-[16px] cursor-pointer
                         font-monsterrat font-semibold text-[16px] leading-[24px] text-white
                     " data-pagination-next>Tiếp theo</span>
-                </div>
+                </div> -->
             </div>
         </div>
 
